--- a/view/novo_sistema.ui
+++ b/view/novo_sistema.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>Form</class>
+ <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,87 +11,70 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Form</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>110</y>
+     <x>20</x>
+     <y>70</y>
      <width>61</width>
-     <height>51</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 16pt &quot;MS Shell Dlg 2&quot;;</string>
+    <string notr="true">font: 15pt &quot;MS Shell Dlg 2&quot;;</string>
    </property>
    <property name="text">
     <string>Nome</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>120</y>
-     <width>211</width>
-     <height>41</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLineEdit" name="form_nome">
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>20</y>
-     <width>241</width>
-     <height>51</height>
+     <y>70</y>
+     <width>251</width>
+     <height>21</height>
     </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 24pt &quot;MS Shell Dlg 2&quot;;</string>
-   </property>
-   <property name="text">
-    <string>NOVO SISTEMA</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btSalvar">
+  <widget class="QPushButton" name="botao_cancelar">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>220</y>
-     <width>101</width>
-     <height>41</height>
+     <x>60</x>
+     <y>170</y>
+     <width>75</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-color: rgb(255, 255, 255);
-font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
+    <string notr="true">image: url(:/botao_cancelar/cancelar.png)</string>
    </property>
    <property name="text">
-    <string>SALVAR</string>
+    <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="btCancelar">
+  <widget class="QPushButton" name="botao_cadastrar">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>220</y>
-     <width>101</width>
-     <height>41</height>
+     <x>230</x>
+     <y>170</y>
+     <width>75</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 0, 0);
-color: rgb(255, 255, 255);
-font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
+    <string notr="true">image: url(:/botao_cadastrar/cadastrar.png)</string>
    </property>
    <property name="text">
-    <string>CANCELAR</string>
+    <string/>
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="botao_cadastrar.qrc"/>
+  <include location="botao_cancelar.qrc"/>
+ </resources>
  <connections/>
 </ui>
