--- a/view/sistema.ui
+++ b/view/sistema.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>751</width>
-    <height>429</height>
+    <height>387</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="botao_adicionar">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -29,7 +29,7 @@
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="botao_alterar">
    <property name="geometry">
     <rect>
      <x>90</x>
@@ -45,7 +45,7 @@
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_3">
+  <widget class="QPushButton" name="botao_consultar">
    <property name="geometry">
     <rect>
      <x>180</x>
@@ -61,7 +61,7 @@
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_4">
+  <widget class="QPushButton" name="botao_excluir">
    <property name="geometry">
     <rect>
      <x>270</x>
@@ -77,7 +77,7 @@
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_5">
+  <widget class="QPushButton" name="botao_retornar">
    <property name="geometry">
     <rect>
      <x>620</x>
@@ -93,7 +93,7 @@
     <string/>
    </property>
   </widget>
-  <widget class="QTableWidget" name="tableWidget">
+  <widget class="QTableWidget" name="tabela">
    <property name="geometry">
     <rect>
      <x>20</x>
