adicionando retornos de funções e botão para recarregar dados

--- a/view/botao_recarregar.qrc
+++ b/view/botao_recarregar.qrc
@@ -1,5 +1,5 @@
 <RCC>
-  <qresource prefix="newPrefix">
+  <qresource prefix="botao_recarregar">
     <file>icones/recarregar.png</file>
   </qresource>
 </RCC>
